// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sharer Component should match snapshot and show <AdvancedFollow/> 1`] = `
<div
  className="modal_items fer_items"
>
  <div
    className="modal_it_img"
  >
    <img
      src="/users/7/avatar.jpg"
    />
  </div>
  <div
    className="modal_it_content"
  >
    <div
      className="modal_it_info"
    >
      <Link
        className="modal_it_username"
        to="/profile/ghalib"
      >
        ghalib
      </Link>
      <span
        className="modal_it_light"
      >
        to 
        selena
      </span>
    </div>
    <div
      className="modal_ff"
    >
      <a
        className="pri_btn follow"
        href="#"
        onClick={[Function]}
      >
        Follow
      </a>
    </div>
  </div>
  <hr />
</div>
`;

exports[`Sharer Component should match snapshot and show <AdvancedUnfollow/> 1`] = `
<div
  className="modal_items fer_items"
>
  <div
    className="modal_it_img"
  >
    <img
      src="/users/7/avatar.jpg"
    />
  </div>
  <div
    className="modal_it_content"
  >
    <div
      className="modal_it_info"
    >
      <Link
        className="modal_it_username"
        to="/profile/ghalib"
      >
        ghalib
      </Link>
      <span
        className="modal_it_light"
      >
        to 
        selena
      </span>
    </div>
    <div
      className="modal_ff"
    >
      <a
        className="pri_btn unfollow"
        href="#"
        onClick={[Function]}
      >
        Unfollow
      </a>
    </div>
  </div>
  <hr />
</div>
`;

exports[`Sharer Component should match snapshot and show <AppLink/> 1`] = `
<div
  className="modal_items fer_items"
>
  <div
    className="modal_it_img"
  >
    <img
      src="/users/24/avatar.jpg"
    />
  </div>
  <div
    className="modal_it_content"
  >
    <div
      className="modal_it_info"
    >
      <Link
        className="modal_it_username"
        to="/profile/ghalib"
      >
        You
      </Link>
      <span
        className="modal_it_light"
      >
        to 
        selena
      </span>
    </div>
    <div
      className="modal_ff"
    >
      <Link
        className="pri_btn follow"
        to="/profile/ghalib"
      >
        Profile
      </Link>
    </div>
  </div>
  <hr />
</div>
`;

exports[`Sharer Component should match snapshot and show <RemoveShare/> 1`] = `
<div
  className="modal_items fer_items"
>
  <div
    className="modal_it_img"
  >
    <img
      src="/users/7/avatar.jpg"
    />
  </div>
  <div
    className="modal_it_content"
  >
    <div
      className="modal_it_info"
    >
      <Link
        className="modal_it_username"
        to="/profile/ghalib"
      >
        ghalib
      </Link>
      <span
        className="modal_it_light"
      >
        to 
        selena
      </span>
    </div>
    <div
      className="modal_ff"
    >
      <a
        className="sec_btn"
        href="#"
        onClick={[Function]}
      >
        Remove as admin
      </a>
    </div>
  </div>
  <hr />
</div>
`;

exports[`Sharer Component should match snapshot and show <RemoveShare/> 2`] = `
<div
  className="modal_items fer_items"
>
  <div
    className="modal_it_img"
  >
    <img
      src="/users/7/avatar.jpg"
    />
  </div>
  <div
    className="modal_it_content"
  >
    <div
      className="modal_it_info"
    >
      <Link
        className="modal_it_username"
        to="/profile/ghalib"
      >
        ghalib
      </Link>
      <span
        className="modal_it_light"
      >
        to 
        You
      </span>
    </div>
    <div
      className="modal_ff"
    >
      <a
        className="sec_btn"
        href="#"
        onClick={[Function]}
      >
        Remove share
      </a>
    </div>
  </div>
  <hr />
</div>
`;
